2014-08-xx Felix Nagel <info@felixnagel.com> & Thomas Juhnke <typo3@van-tomas.de>

	2.0.1 released (no changes required)
	* Improved description for TS constants

2014-07-24 Felix Nagel <info@felixnagel.com> & Thomas Juhnke <typo3@van-tomas.de>

	2.0.0 released (Migration needed see documentation)
	* Rewritten for Extbase/Fluid usage
	* Refactoring of Backend Hooks (Flexform, T3editor Wizard)
	* Introduction of PageRenderer ViewHelpers for asset injection
	* Introduction of (basic) Unit tests
	* Integration of Prism (see http://prismjs.com/)
	* Removal of SyntaxHighlighter v2 + beautyofcode (jQuery) abstraction layer
	* Introducing ReST documentation

	Note: This release is introducing breaking changes. Please make sure to
	make a backup of your current site content and use the update script to update
	your boc content elements.

2013-09-05 Felix Nagel  <info@felixnagel.com>

	1.0.3 released (no changes required)
	* fixed: label subpart rendering, see #51541, thx to Tommy Juhnke
	* improved: general coding style and CGL

2013-03-28 Felix Nagel  <info@felixnagel.com>

	1.0.2 released (no changes required)
	* fixed: issue with adding jQuery file to the document, see #46755, thx to Jochen Fröhlich

2013-03-11 Felix Nagel  <info@felixnagel.com>

	1.0.1 released (no changes required)
	* fixed: requirements as needed for planned TYPO3 TER cleanup

2013-01-26 Felix Nagel  <info@felixnagel.com>

	1.0.0 released (you need to clear all caches)
	* added: add possibility to change the on ready callback signature of jQuery, thx to Thomas Juhnke, see http://forge.typo3.org/issues/44762

2012-11-26 Felix Nagel  <info@felixnagel.com>

	* improved: t3editor integration in BE, now code language aware (at least for PHP, CSS, JS, TS, XML)
	* removed: old t3editor integration files (EXT:typoscript_code)
	* improved: BE layout title
	* fixed: CGL
	* added: inline TODO comments
	* removed: outdated documentation pdf
	* fixed: copyright year

2012-09-06 Felix Nagel  <info@felixnagel.com>
