@@ -1,0 +1,81 @@
+<?php
+namespace TYPO3\Beautyofcode\ViewHelpers\PageRenderer;
+
+/***************************************************************
+ * Copyright notice
+ *
+ * (c) 2013 Thomas Juhnke <typo3@van-tomas.de>
+ * (c) 2014 Felix Nagel <info@felixnagel.com>
+ *
+ * All rights reserved
+ *
+ * This script is part of the TYPO3 project. The TYPO3 project is
+ * free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * The GNU General Public License can be found at
+ * http://www.gnu.org/copyleft/gpl.html.
+ *
+ * This script is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * This copyright notice MUST APPEAR in all copies of the script!
+ ***************************************************************/
+
+/**
+ * Adds javascript libraries to the page footer
+ *
+ * @package \TYPO3\Beautyofcode\ViewHelpers\PageRenderer
+ * @author Thomas Juhnke <typo3@van-tomas.de>
+ * @license http://www.gnu.org/licenses/gpl.html GNU General Public License, version 3 or later
+ * @link http://www.van-tomas.de/
+ */
+class AddJsFooterFileViewHelper extends \TYPO3\Beautyofcode\Core\ViewHelper\AbstractPageRendererViewHelper {
+
+	/**
+	 *
+	 * @var \TYPO3\CMS\Frontend\Controller\TypoScriptFrontendController
+	 */
+	protected $typoscriptFrontendController;
+
+	/**
+	 * (non-PHPdoc)
+	 * @see \TYPO3\CMS\Fluid\Core\ViewHelper\AbstractViewHelper::initialize()
+	 */
+	public function initialize() {
+		$this->typoscriptFrontendController = $GLOBALS['TSFE'];
+	}
+
+	/**
+	 * Adds JS file to footer
+	 *
+	 * @param string $file File name
+	 * @param string $type Content Type
+	 * @param boolean $compress
+	 * @param boolean $forceOnTop
+	 * @param string $allWrap
+	 * @param boolean $excludeFromConcatenation
+	 * @param string $splitChar The char used to split the allWrap value
+	 * @return void
+	 */
+	public function render($file, $type = 'text/javascript', $compress = TRUE, $forceOnTop = FALSE, $allWrap = '', $excludeFromConcatenation = FALSE, $splitChar = '|') {
+		$this->pageRenderer->addJsFooterFile(
+			$this->typoscriptFrontendController
+				->tmpl
+				->getFileName($file),
+			$type,
+			$compress,
+			$forceOnTop,
+			$allWrap,
+			$excludeFromConcatenation,
+			$splitChar
+		);
+
+		return NULL;
+	}
+}
+?>
